# stock-agent-lab

./: .env.example  .gitignore  README.md  pyproject.toml
.venv-310/: pyvenv.cfg
docs/: project_status.md
src/stock_agent_lab/: __init__.py  cli.py  models.py  pipeline.py
src/stock_agent_lab/agents/: __init__.py  base.py  fundamentals.py  news.py  researchers.py  risk.py  technical.py  trader.py
src/stock_agent_lab/data/: __init__.py  akshare_provider.py  indicators.py
src/stock_agent_lab/graph/: __init__.py  conditional_logic.py  propagation.py  setup.py  states.py  trading_graph.py
src/stock_agent_lab/llm/: __init__.py  client.py
src/stock_agent_lab/reports/: __init__.py  writer.py
tests/: conftest.py  test_cli.py  test_data_provider.py  test_graph_workflow.py  test_llm_client.py  test_pipeline.py  test_reports.py
